--- a/src/Confitec.Veiculo.Domain/Confitec.Veiculo.Domain.csproj
+++ b/src/Confitec.Veiculo.Domain/Confitec.Veiculo.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Confitec.Core\Confitec.Core.csproj" />
+  </ItemGroup>
+
 </Project>
